--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
         .image-modal-content {
             margin: auto;
+            margin-top: 5%;
             display: block;
             max-width: 80%;
             max-height: 80%;
@@ -238,6 +239,10 @@
                 text-align: right;
             }
 
+            .image-modal-content {
+                margin-top: 35%;
+            }
+
             #p2{
                 display: block;
                 width:100%;
@@ -261,6 +266,10 @@
             .img-cont p{
                 width: 100%;
                 text-align: justify;
+            }
+
+            .image-modal-content {
+                margin-top: 50%;
             }
         }   
 
