--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
             .img-cont p{
                 width: 100%;
-                text-align: center;
+                text-align: justify;
             }
 
             .image-modal-content {
