--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         .image-modal-content {
             margin: auto;
-            margin-top: 5%;
+            margin-top: 50px;
             display: block;
             max-width: 80%;
             max-height: 80%;
@@ -239,10 +239,6 @@
                 text-align: right;
             }
 
-            .image-modal-content {
-                margin-top: 35%;
-            }
-
             #p2{
                 display: block;
                 width:100%;
@@ -266,10 +262,6 @@
             .img-cont p{
                 width: 100%;
                 text-align: justify;
-            }
-
-            .image-modal-content {
-                margin-top: 50%;
             }
         }   
 
